[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = ""
authors = ["juanrodriguez37 <juan.rodriguez@muttdata.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^7.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"
